--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -2,53 +2,120 @@
 output: pdf_document
 ---
 
-An extensive body of literature describes dramatic changes in the rates of health risking behaviors (HRBs) during adolescence [e.g., binge drinking, risky sexual behavior; @centersfordiseasecontrolandprevention2003;@chassin2009;@patrick2011;@stevenson2007;@willoughby2013]. These HRBs lead to what has been called the paradox of adolescence: although this is a period of robust physical health and increased mental ability, both morbidity and mortality increase [@dahl2004]. It can seem perplexing that adolescents engage in these HRBs despite evaluating the probability of uncertain events with accuracy similar to adults [@fischhoff2008], and demonstrating general accuracy (on occasion, somewhat excessive optimism) about the probability of future outcomes [@debruin2007;@fischhoff2000]. These findings become less paradoxical when considered from a functional-developmental perspective in which adolescents increase in sensation and novelty seeking. That is, taking risks, or exploring situations with known or unknown probabilistic outcomes, is an essential part of this developmental stage, perhaps allowing adolescents to build expertise and wisdom about the world they must engage with as adults [@crone2012;@blakemore2014;@romer2017].  
+An extensive body of literature describes dramatic changes in the rates of health risking behaviors (HRBs) during adolescence [e.g., binge drinking, risky sexual behavior; @centersfordiseasecontrolandprevention2003;@chassin2009;@patrick2011;@stevenson2007;@willoughby2013].
+These HRBs lead to what has been called the paradox of adolescence: although this is a period of robust physical health and increased mental ability, both morbidity and mortality increase [@dahl2004].
+It can seem perplexing that adolescents engage in these HRBs despite evaluating the probability of uncertain events with accuracy similar to adults [@fischhoff2008], and demonstrating general accuracy (on occasion, somewhat excessive optimism) about the probability of future outcomes [@debruin2007;@fischhoff2000].
+These findings become less paradoxical when considered from a functional-developmental perspective in which adolescents increase in sensation and novelty seeking.
+That is, taking risks, or exploring situations with known or unknown probabilistic outcomes, is an essential part of this developmental stage, perhaps allowing adolescents to build expertise and wisdom about the world they must engage with as adults [@crone2012;@blakemore2014;@romer2017].  
 
-In order to more fully understand this increased propensity for exploration during adolescence, it is crucial to also understand the motives that compel and shape such exploration. That is, differences in sub-domains of motivation will increases or decreases the expected value of various learning opportunities, and thus alter the ways in which adolescents express this exploratory behavior. Examining learning processes directly may be able to provide a window into effects of motivations that influence low level computations such as perception of stimulus salience. A substantial body of research documents broad motivational changes in adolescence as captured by the sensation-seeking construct [@steinberg2008;@harden2011;@zuckerman1978;@ruch2001], but very little work examines adolescent motivation at a finer resolution, and none examines the impact of different motivations on stimulus salience and basic learning processes that have the potential to shape an adolescent's relation to the environment. 
+In order to more fully understand this increased propensity for exploration during adolescence, it is crucial to also understand the motives that compel and shape such exploration.
+That is, differences in sub-domains of motivation will increases or decreases the expected value of various learning opportunities, and thus alter the ways in which adolescents express this exploratory behavior.
+Examining learning processes directly may be able to provide a window into effects of motivations that influence low level computations such as perception of stimulus salience.
+A substantial body of research documents broad motivational changes in adolescence as captured by the sensation-seeking construct [@steinberg2008;@harden2011;@zuckerman1978;@ruch2001], but very little work examines adolescent motivation at a finer resolution, and none examines the impact of different motivations on stimulus salience and basic learning processes that have the potential to shape an adolescent's relation to the environment. 
 
-Understanding adolescence as an important period for social development is also necessary for understanding these behavioral and motivational changes [@crone2012;@blakemore2014]. In fact, many focal adolescent health risks are interpersonal in nature [risky sex, drinking and driving with friends, violence; @kann2014]. It is unclear what relative proportions of adolescent exploration are of the social versus nonsocial environments, but it is clear that motivational changes occur in a milieu that shapes and is a target of many of the behaviors adolescent researchers care about. This proposal describes work that starts to lay an empirical foundation for a descriptive and mechanistic conceptualization of changes in adolescent motivated social behavior. The long-term objective of laying this foundation is to illuminate the role of adolescent-developing social motives in health-relevant behaviors and environmental responses.
+Understanding adolescence as an important period for social development is also necessary for understanding these behavioral and motivational changes [@crone2012;@blakemore2014].
+In fact, many focal adolescent health risks are interpersonal in nature [risky sex, drinking and driving with friends, violence; @kann2014].
+It is unclear what relative proportions of adolescent exploration are of the social versus nonsocial environments, but it is clear that motivational changes occur in a milieu that shapes and is a target of many of the behaviors adolescent researchers care about.
+This proposal describes work that starts to lay an empirical foundation for a descriptive and mechanistic conceptualization of changes in adolescent motivated social behavior.
+The long-term objective of laying this foundation is to illuminate the role of adolescent-developing social motives in health-relevant behaviors and environmental responses.
 
 # Motivations from an Evolutionary Psychology Perspective
 
-Two motivational domains appear often in the introductions (and occasionally also in the discussion sections) of research on adolescence: sex and status. With regard to sex, authors often acknowledge that the transition to sexual maturity is a defining biological feature of adolescence, though very little contemporary adolescent research investigates directly the increased motivation to explore and engage in romantic and sexual behavior [@suleiman2017]. Status is studied more directly, with many articles focusing on popularity antecedents [@lafontana2002;@OwensTheymightnot2009;@LiChineseAmericanchildren2012;@rose2004], and consequences [@allen2005;@cillessen2014;@meuwese_friends_2017]. Though there is a long history of research on motivation in psychology, very little contemporary adolescent research situates mate-seeking and status in a broader motivational framework.
+Two motivational domains appear often in the introductions (and occasionally also in the discussion sections) of research on adolescence: sex and status.
+With regard to sex, authors often acknowledge that the transition to sexual maturity is a defining biological feature of adolescence, though very little contemporary adolescent research investigates directly the increased motivation to explore and engage in romantic and sexual behavior [@suleiman2017].
+Status is studied more directly, with many articles focusing on popularity antecedents [@lafontana2002;@OwensTheymightnot2009;@LiChineseAmericanchildren2012;@rose2004], and consequences [@allen2005;@cillessen2014;@meuwese_friends_2017].
+Though there is a long history of research on motivation in psychology, very little contemporary adolescent research situates mate-seeking and status in a broader motivational framework.
 
-The fundamental social motives (FSM) framework proposed by @kenrick2010 may be helpful for understanding differential effects of both domains, as it parses motives into a small set of domains. These domains might be said to be fundamental in the sense that they are, plausibly, evolved normative psychological inputs on value computations during decision making processes that have relevance for survival and reproduction. The evolutionary-psychological framework is especially important for understanding adolescence, a developmental period that may be considerably sensitive to selection pressure [@ellis2012;@suleiman2016]. Using the FSM framework will allow integration of findings from this work into the broader evolutionary psychology conversation that is beginning to arise in adolescent research. 
+The fundamental social motives (FSM) framework proposed by @kenrick2010 may be helpful for understanding differential effects of both domains, as it parses motives into a small set of domains.
+These domains might be said to be fundamental in the sense that they are, plausibly, evolved normative psychological inputs on value computations during decision making processes that have relevance for survival and reproduction.
+The evolutionary-psychological framework is especially important for understanding adolescence, a developmental period that may be considerably sensitive to selection pressure [@ellis2012;@suleiman2016].
+Using the FSM framework will allow integration of findings from this work into the broader evolutionary psychology conversation that is beginning to arise in adolescent research. 
 
-Another advantage of the FSM approach is that it parses motivations by relationships. There are many traditions that would place status motives and mate-seeking motives within one of two broad domains, respectively, such as agency and communion (Bakan, 1966), power and intimacy [@mcadams_power_1985], and many others [@wiggins1991]. However, those traditions are not able to capture the distinct challenges inherent in specific subsets of social relations, and thus the distinct motivational adaptations that may plausibly arise from those challenges. The FSM approach organizes the measurement of motivation around these broad relationship categories, making it especially useful for thinking about adolescence, which is proposed to be marked by a restructuring of the social world [@nelson2005;@nelson2016] -- perhaps as a consequence of developing motivations. Indeed, the FSM framework is especially useful given how different motives plausibly map onto important relationships at different developmental stages (specifically, mate-seeking as a result of puberty, but also, e.g., kin care, later, in adulthood).
+Another advantage of the FSM approach is that it parses motivations by relationships.
+There are many traditions that would place status motives and mate-seeking motives within one of two broad domains, respectively, such as agency and communion (Bakan, 1966), power and intimacy [@mcadams_power_1985], and many others [@wiggins1991].
+However, those traditions are not able to capture the distinct challenges inherent in specific subsets of social relations, and thus the distinct motivational adaptations that may plausibly arise from those challenges.
+The FSM approach organizes the measurement of motivation around these broad relationship categories, making it especially useful for thinking about adolescence, which is proposed to be marked by a restructuring of the social world [@nelson2005;@nelson2016] -- perhaps as a consequence of developing motivations.
+Indeed, the FSM framework is especially useful given how different motives plausibly map onto important relationships at different developmental stages (specifically, mate-seeking as a result of puberty, but also, e.g., kin care, later, in adulthood).
 
-The relationship-centric approach of FSM highlights that these motives hypothesized to develop and gain importance during adolescence are inherently interpersonal. Depending on how status is defined, it refers to either the degree to which one is liked or recognized by one's peers, or the degree to which one has the respect or esteem of one's peers [@srivastava2011;@lafontana2002]. Of course, in each case status is defined by the beliefs of others in one's social network, and, in both cases, accurate perception of one's own and of other people's place in the hierarchy is important. Similarly, in mate-selection, accurate perceptions of who is or is not a potential partner in the first place is an important basis for subsequent motivated behavior. Indeed, it is then within the context of these interpersonal networks that subsequent health-risking behaviors are enacted, in ways that are perhaps both driven and shaped by these motives.
+The relationship-centric approach of FSM highlights that these motives hypothesized to develop and gain importance during adolescence are inherently interpersonal.
+Depending on how status is defined, it refers to either the degree to which one is liked or recognized by one's peers, or the degree to which one has the respect or esteem of one's peers [@srivastava2011;@lafontana2002].
+Of course, in each case status is defined by the beliefs of others in one's social network, and, in both cases, accurate perception of one's own and of other people's place in the hierarchy is important.
+Similarly, in mate-selection, accurate perceptions of who is or is not a potential partner in the first place is an important basis for subsequent motivated behavior.
+Indeed, it is then within the context of these interpersonal networks that subsequent health-risking behaviors are enacted, in ways that are perhaps both driven and shaped by these motives.
 
-Literature on risk-taking behavior directly implicates both mate-seeking and status motivation domains in risky sexual behaviors and a variety of potentially status-related health-risking behaviors such as substance use. For example, in a study which assessed perceptions of the sexual-self among adolescents, there was an association between increasing sexually-motivated self-perceptions and various forms of sexual risk-taking [@buzwell1996]. With regard to status, there is some evidence consistent with the idea that adolescents who have high popularity as rated by peers may try to maintain their status through health-risking behaviors [@mayeux2008]. Beyond health-risking behaviors, these motives may also be crucial ingredients in understanding a whole class of risk-taking that is less negatively valued, including but not limited to extending one's social and physical environment beyond one's childhood home [@sercombe2014]. Although the above literature acknowledges motivation, and measures related constructs, mate-seeking and status _motives_ are rarely or never a direct target of measurement. There is a need for research investigating how adolescent learning and exploration is shaped in the presence of stimuli which are motivationally relevant to their developmental stage.
+Literature on risk-taking behavior directly implicates both mate-seeking and status motivation domains in risky sexual behaviors and a variety of potentially status-related health-risking behaviors such as substance use.
+For example, in a study which assessed perceptions of the sexual-self among adolescents, there was an association between increasing sexually-motivated self-perceptions and various forms of sexual risk-taking [@buzwell1996].
+With regard to status, there is some evidence consistent with the idea that adolescents who have high popularity as rated by peers may try to maintain their status through health-risking behaviors [@mayeux2008].
+Beyond health-risking behaviors, these motives may also be crucial ingredients in understanding a whole class of risk-taking that is less negatively valued, including but not limited to extending one's social and physical environment beyond one's childhood home [@sercombe2014].
+Although the above literature acknowledges motivation, and measures related constructs, mate-seeking and status _motives_ are rarely or never a direct target of measurement.
+There is a need for research investigating how adolescent learning and exploration is shaped in the presence of stimuli which are motivationally relevant to their developmental stage.
 
 # Status motive
 
-Status during adolescence has been studied from a variety of perspectives, including perceptions, structure, strategies, and outcomes [@allen2005;@SelfhoutEmergingLateAdolescent2010;@lafontana2010;@jarvinen_adolescents_1996;@underwood1996;@savin-williams1979]. Though status motives have been addressed, self-report about status priorities are most common. For example, using self-report measures, @lafontana2010 found that prioritizing status over other domains (e.g., achievement, friendship) peaks in late adolescence. However, reliance on self-report is not optimal, especially in a domain with strong social norms about the value of attaining high status. Moreover, self-report may not be able to distinguish between the intrinsic motive to learn about and navigate status hierarchies, and the ability (or lack thereof) to successfully actualize that motive. One interesting possibility is that status motives are constant throughout early life but that during adolescent development, social cognition matures to a degree that allows increasing social status complexity (which appears as a reorientation toward peer status concerns). Nonetheless, as adolescents proceed developmentally toward adulthood, social status plays an increasingly important role in determining many types of opportunities. For this reason, the motivation to explore and master status hierarchies, and perhaps gain status, remains an important target for research.
+Status during adolescence has been studied from a variety of perspectives, including perceptions, structure, strategies, and outcomes [@allen2005;@SelfhoutEmergingLateAdolescent2010;@lafontana2010;@jarvinen_adolescents_1996;@underwood1996;@savin-williams1979].
+Though status motives have been addressed, self-report about status priorities are most common.
+For example, using self-report measures, @lafontana2010 found that prioritizing status over other domains (e.g., achievement, friendship) peaks in late adolescence.
+However, reliance on self-report is not optimal, especially in a domain with strong social norms about the value of attaining high status.
+Moreover, self-report may not be able to distinguish between the intrinsic motive to learn about and navigate status hierarchies, and the ability (or lack thereof) to successfully actualize that motive.
+One interesting possibility is that status motives are constant throughout early life but that during adolescent development, social cognition matures to a degree that allows increasing social status complexity (which appears as a reorientation toward peer status concerns).
+Nonetheless, as adolescents proceed developmentally toward adulthood, social status plays an increasingly important role in determining many types of opportunities.
+For this reason, the motivation to explore and master status hierarchies, and perhaps gain status, remains an important target for research.
 
 # Mate-seeking motive
 
-Puberty marks the beginning of sexual maturation of an individual, and the beginning of the adolescent developmental period [@susman_puberty_2009]. Though there has been extensive research on the importance of romantic and sexual relationships during adolescence, peer and parent influences, risky patterns of sexual behavior, and health-relevant outcomes [@schalet2011;@suleiman2015;@capaldi_heterosexual_2002], there has been very little research on sexual development as it relates to motivation. Indeed, while the study of risky sexual behavior is clearly important, there is so little research on the normative aspects of sexual development during adolescence (for example as a developmentally appropriate motivation) that a recent review called it "the 'elephant in the room' of adolescent ... development" [@suleiman2017]. Most work to date has focused on risk factors for unsafe sex unrelated to motivation [e.g., poverty, peer influence, parental monitoring; james2012;@santelli1992;@carlson2014]. This neglects the importance of sexual motivation (i.e., desire) in the development of an empowered and responsible sexual identity, impeding efforts to reduce health-risks through sexual education [@fine2006]. Although sexual desire is recognized rhetorically as an important component in emerging adolescent romantic and sexual behavior, its direct interrogation through either behavioral or self report measures is limited. Likewise, the role of mate-seeking motives in the exploratory behavior characteristic of adolescence is also under-studied.
+Puberty marks the beginning of sexual maturation of an individual, and the beginning of the adolescent developmental period [@susman_puberty_2009].
+Though there has been extensive research on the importance of romantic and sexual relationships during adolescence, peer and parent influences, risky patterns of sexual behavior, and health-relevant outcomes [@schalet2011;@suleiman2015;@capaldi_heterosexual_2002], there has been very little research on sexual development as it relates to motivation.
+Indeed, while the study of risky sexual behavior is clearly important, there is so little research on the normative aspects of sexual development during adolescence (for example as a developmentally appropriate motivation) that a recent review called it "the 'elephant in the room' of adolescent ... development" [@suleiman2017].
+Most work to date has focused on risk factors for unsafe sex unrelated to motivation [e.g., poverty, peer influence, parental monitoring; james2012;@santelli1992;@carlson2014].
+This neglects the importance of sexual motivation (i.e., desire) in the development of an empowered and responsible sexual identity, impeding efforts to reduce health-risks through sexual education [@fine2006].
+Although sexual desire is recognized rhetorically as an important component in emerging adolescent romantic and sexual behavior, its direct interrogation through either behavioral or self report measures is limited.
+Likewise, the role of mate-seeking motives in the exploratory behavior characteristic of adolescence is also under-studied.
 
 # Reinforcement learning
 
-As noted above, research on status and mate-seeking motives during adolescence is either largely absent, or reliant on self-report. The field would benefit greatly from a new measure that provides an alternative method to capture individual and developmental differences in the salience of these motives across the transition from childhood through adolescence and into adulthood. A primary focus of this dissertation is the design and validation of a new behavioral measure to do so. The measure described below experimentally manipulates motivational domain-relevant cues during reinforcement learning. The basic reinforcement learning paradigm has been well described in both humans and rodents in the behavioral economics literature [@collins_how_2012;@glimcher2009;@jones2011a]. The salience of stimuli in such a paradigm directly impacts learning rates [@cunningham2012]. The premise of this new measure is that linking a stimulus to motivationally relevant information will affect the salience of that stimulus in proportion to the strength of the motivation. By measuring how learning rates are potentiated by this motivational framing, it may be possible to measure a low-level behavioral indicator of status and mate-seeking motives. Moreover, this would demonstrate that status and mate-seeking motives directly affect reinforcement learning, and so, perhaps, shape exploratory behavior postulated to be a primary task of this developmental period.
+As noted above, research on status and mate-seeking motives during adolescence is either largely absent, or reliant on self-report.
+The field would benefit greatly from a new measure that provides an alternative method to capture individual and developmental differences in the salience of these motives across the transition from childhood through adolescence and into adulthood.
+A primary focus of this dissertation is the design and validation of a new behavioral measure to do so.
+The measure described below experimentally manipulates motivational domain-relevant cues during reinforcement learning.
+The basic reinforcement learning paradigm has been well described in both humans and rodents in the behavioral economics literature [@collins_how_2012;@glimcher2009;@jones2011a].
+The salience of stimuli in such a paradigm directly impacts learning rates [@cunningham2012].
+The premise of this new measure is that linking a stimulus to motivationally relevant information will affect the salience of that stimulus in proportion to the strength of the motivation.
+By measuring how learning rates are potentiated by this motivational framing, it may be possible to measure a low-level behavioral indicator of status and mate-seeking motives.
+Moreover, this would demonstrate that status and mate-seeking motives directly affect reinforcement learning, and so, perhaps, shape exploratory behavior postulated to be a primary task of this developmental period.
 
-In designing an appropriate reinforcement learning task, it is important to consider that the optimal parameters governing the accumulation of information will differ depending on the stability of the association between the response to a stimulus and reward receipt (assuming the association is probabilistic). For example, in the context of a task with a stable association, after some number of successful pairings, the learner should no longer be tempted to switch her response, thus ensuring she is not fooled by a random run of no-reward feedback. However, if the association is not stable, and does actually switch (as is the case in reversal learning paradigms), the learner should optimally have a lower threshold for switching her association between a particular response and expected reward. For the learning strategy captured by the the proposed task to have relevance for our understanding of real-world behavior, its association stabilities should roughly correspond to the stability of status-relevant and mate-seeking-relevant associations in the environment.
+In designing an appropriate reinforcement learning task, it is important to consider that the optimal parameters governing the accumulation of information will differ depending on the stability of the association between the response to a stimulus and reward receipt (assuming the association is probabilistic).
+For example, in the context of a task with a stable association, after some number of successful pairings, the learner should no longer be tempted to switch her response, thus ensuring she is not fooled by a random run of no-reward feedback.
+However, if the association is not stable, and does actually switch (as is the case in reversal learning paradigms), the learner should optimally have a lower threshold for switching her association between a particular response and expected reward.
+For the learning strategy captured by the the proposed task to have relevance for our understanding of real-world behavior, its association stabilities should roughly correspond to the stability of status-relevant and mate-seeking-relevant associations in the environment.
 
-Both sociometric status and romantic relationships are fairly rank-order stable throughout adolescence. In a study of roughly 300 adolescents with high sociometric status, estimates of the year-to-year stability from 6th-12th grade ranged between .51 and .72, with stability across all but a single 1-year interval above .6 [@cillessen2006]. The percent of adolescents reporting romantic relationships lasting 11 months or longer, an indicator of stability relevant for this task, increases from 20% at an age of 14 years, to roughly 60% at 16 years [@collins2003]. Given the temporal dimensions of the proposed task, it is reasonable to assume that participants would not prioritize a learning strategy more appropriate to a reversal-learning task.
+Both sociometric status and romantic relationships are fairly rank-order stable throughout adolescence.
+In a study of roughly 300 adolescents with high sociometric status, estimates of the year-to-year stability from 6th-12th grade ranged between .51 and .72, with stability across all but a single 1-year interval above .6 [@cillessen2006].
+The percent of adolescents reporting romantic relationships lasting 11 months or longer, an indicator of stability relevant for this task, increases from 20% at an age of 14 years, to roughly 60% at 16 years [@collins2003].
+Given the temporal dimensions of the proposed task, it is reasonable to assume that participants would not prioritize a learning strategy more appropriate to a reversal-learning task.
 
 # Aims
 
-Motivations have been under-studied in efforts to understand changes in behavior during adolescence, many of which have consequences for health and well-being. Relevant motivations that are often either peripherally or rhetorically identified in the literature are well captured by the evolutionary-psychological approach codified in the FSM framework. Status and mate-seeking are especially relevant for the adolescent development period. As learning and exploration are thought to be a crucial aspect of the importance of behavioral changes in adolescents, examining these motives using reinforcement learning provides the opportunity to better understand the motives themselves through a behavioral method, and also to understand the impact of motives on a mechanism related to learning and exploration. Broadly speaking, the goal of this dissertation is to investigate the appropriateness of this reinforcement learning task, as well as the ways in which these motives (measured in multiple ways) relate to attitudes and behaviors.
+Motivations have been under-studied in efforts to understand changes in behavior during adolescence, many of which have consequences for health and well-being.
+Relevant motivations that are often either peripherally or rhetorically identified in the literature are well captured by the evolutionary-psychological approach codified in the FSM framework.
+Status and mate-seeking are especially relevant for the adolescent development period.
+As learning and exploration are thought to be a crucial aspect of the importance of behavioral changes in adolescents, examining these motives using reinforcement learning provides the opportunity to better understand the motives themselves through a behavioral method, and also to understand the impact of motives on a mechanism related to learning and exploration.
+Broadly speaking, the goal of this dissertation is to investigate the appropriateness of this reinforcement learning task, as well as the ways in which these motives (measured in multiple ways) relate to attitudes and behaviors.
 
-*Aim 1a: Does framing reinforcement learning with (mate-seeking and status) motivational contexts sensitize the learner and potentiate learning?* Relevance of the stimuli in the reinforcement learning paradigm for individuals' underlying motives should affect the salience of stimuli, and thus also the rate at which individuals learn. On average, I expect information related to status and mate-seeking motives to be motivationally relevant, and to potentiate learning over and above minimally-social information.
+*Aim 1a: Does framing reinforcement learning with (mate-seeking and status) motivational contexts sensitize the learner and potentiate learning?* Relevance of the stimuli in the reinforcement learning paradigm for individuals' underlying motives should affect the salience of stimuli, and thus also the rate at which individuals learn.
+On average, I expect information related to status and mate-seeking motives to be motivationally relevant, and to potentiate learning over and above minimally-social information.
 
-*Aim 1b: How does motivational potentiation of learning covary with development?* It is likely that both status and mate-seeking motives increase between childhood and adolescence. If differences in learning rates between stimuli with social and minimally-social relevance reflect underlying motives, then I expect that learning potentiation will increase from early to late adolescence.
+*Aim 1b: How does motivational potentiation of learning covary with development?* It is likely that both status and mate-seeking motives increase between childhood and adolescence.
+If differences in learning rates between stimuli with social and minimally-social relevance reflect underlying motives, then I expect that learning potentiation will increase from early to late adolescence.
 
-*Aim 2: Does the motivational potentiation of learning relate to a constellation of self-report measures that theoretically ought to demonstrate convergence? Specifically, (i) what is the relation between motivational potentiation and self-report fundamental social motives; (ii) what is the relation between self-report fundamental social motives and motive-congruent outcomes; and (iii) what is the relation between motivational potentiation and motive-congruent outcomes.*  Measures of such constructs include self-reported fundamental social motives, self-report health risk-behaviors, and intermediate attitudes about the social consequences of health-risking behaviors. I hypothesize, broadly speaking, that there will be a positive correlation between self-report motives and differences in learning in motive conditions, and that attitudes will moderate the relation between motives (both self-report and as measured in learning behavior) and risk-behavior outcomes.
+*Aim 2: Does the motivational potentiation of learning relate to a constellation of self-report measures that theoretically ought to demonstrate convergence? Specifically, (i) what is the relation between motivational potentiation and self-report fundamental social motives; (ii) what is the relation between self-report fundamental social motives and motive-congruent outcomes; and (iii) what is the relation between motivational potentiation and motive-congruent outcomes.*  Measures of such constructs include self-reported fundamental social motives, self-report health risk-behaviors, and intermediate attitudes about the social consequences of health-risking behaviors.
+I hypothesize, broadly speaking, that there will be a positive correlation between self-report motives and differences in learning in motive conditions, and that attitudes will moderate the relation between motives (both self-report and as measured in learning behavior) and risk-behavior outcomes.
 
-*Aim 3a: Do close others perceive individual differences in motives that are reflected in motivational learning potentiation?* The importance of accurate interpersonal perception of status and mate-seeking motives may be exploited as a way to assess the construct validity of the learning paradigm, and also adds to literature on the validity of the FSM approach. Correspondence between informant perceptions of individual differences in motive strength, and motive strength as elicited on the reinforcement learning task would support the external validity of this measure of motives. 
+*Aim 3a: Do close others perceive individual differences in motives that are reflected in motivational learning potentiation?* The importance of accurate interpersonal perception of status and mate-seeking motives may be exploited as a way to assess the construct validity of the learning paradigm, and also adds to literature on the validity of the FSM approach.
+Correspondence between informant perceptions of individual differences in motive strength, and motive strength as elicited on the reinforcement learning task would support the external validity of this measure of motives. 
 
-*Aim 3b: Is there agreement between close others and the self in perceptions of fundamental social motives?* Reports from informants with varying relationships to the target participant will allow exploration of the predicted importance of relationships to the motivations investigated here. If motives are evolved responses to challenges arising from specific social relations, then actors in those relationship roles should be in the ideal position to both perceive and express those motives. Differences in consensus by relationship type will help corroborate the FSM approach to the structure of motivation.
+*Aim 3b: Is there agreement between close others and the self in perceptions of fundamental social motives?* Reports from informants with varying relationships to the target participant will allow exploration of the predicted importance of relationships to the motivations investigated here.
+If motives are evolved responses to challenges arising from specific social relations, then actors in those relationship roles should be in the ideal position to both perceive and express those motives.
+Differences in consensus by relationship type will help corroborate the FSM approach to the structure of motivation.
 <!--stackedit_data:
 eyJoaXN0b3J5IjpbLTEzMTMwNTc4NjQsLTE0NDQwNjQxMV19
 -->
